# Athena-reasoning-sandbox

./: README.md  pyproject.toml  requirements.txt
.deepeval/: .deepeval_telemetry.txt
checkpoints/pretrain/checkpoint-final/: config.json  generation_config.json  model.safetensors
configs/: finetuning_config.yaml  merge_config.yaml  pretraining_config.yaml
neuro-fusion-bench/: README.md  requirements.txt
neuro-fusion-bench/configs/: eval_config.yaml
neuro-fusion-bench/src/: __init__.py  main.py
neuro-fusion-bench/src/evaluation/: __init__.py  agent_bench.py  judge.py
neuro-fusion-bench/src/merging/: __init__.py  merge_operators.py  merge_pipeline.py
neuro-fusion-bench/src/reasoning/: __init__.py  swi_reasoning.py
src/: __init__.py  main.py
src/bridge/: __init__.py  agent_bench_bridge.py
src/finetuning/: __init__.py  lora_trainer.py  sft_trainer.py
src/pretraining/: __init__.py  continued_pretraining.py  from_scratch.py
src/utils/: __init__.py  metrics.py  rag_evaluator.py
tests/: test_bridge.py  test_finetuning.py  test_merging_and_reasoning.py  test_pretraining.py  test_rag_evaluator.py
